[gd_scene load_steps=12 format=3 uid="uid://bmlw1nxt62n7b"]

[ext_resource type="Script" uid="uid://d0wfy4dxslkqu" path="res://entities/burger_boss/lazer_beam/lazer_beam.gd" id="1_dqaer"]
[ext_resource type="Texture2D" uid="uid://jub4b4je51y" path="res://entities/burger_boss/lazer_beam/lazer_beam_circle.png" id="2_dqaer"]

[sub_resource type="Curve" id="Curve_sr12g"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.14689265, 1), 0.0, 0.0, 0, 0, Vector2(0.85310733, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_assbw"]
curve = SubResource("Curve_sr12g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bd3iy"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
angular_velocity_min = -45.000015
angular_velocity_max = 44.999985
gravity = Vector3(0, 4, 0)
scale_min = 0.099999994
scale_max = 0.25
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_assbw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qwbgx"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
angular_velocity_min = -45.000015
angular_velocity_max = 44.999985
gravity = Vector3(0, 4, 0)
scale_min = 0.19999999
scale_max = 0.39999998
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_assbw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sgvm5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(50, 2, 1)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
angular_velocity_min = -45.000015
angular_velocity_max = 44.999985
gravity = Vector3(0, 4, 0)
scale_min = 0.099999994
scale_max = 0.25
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_assbw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5e3s"]
size = Vector2(100, 4)

[sub_resource type="Animation" id="Animation_gk34d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_t5e3s"]
resource_name = "attack"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a5n8p"]
_data = {
&"RESET": SubResource("Animation_gk34d"),
&"attack": SubResource("Animation_t5e3s")
}

[node name="LaserBeam" type="Line2D"]
z_index = 1
points = PackedVector2Array(0, 0, 100, 0)
width = 4.0
default_color = Color(0, 18.892157, 18.892157, 1)
script = ExtResource("1_dqaer")
length = 100.0

[node name="LazerStart" type="GPUParticles2D" parent="."]
z_index = 1
amount = 24
texture = ExtResource("2_dqaer")
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_bd3iy")

[node name="LazerEnd" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(100, 0)
amount = 24
texture = ExtResource("2_dqaer")
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_qwbgx")

[node name="LazerLine" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(50, 0)
rotation = 0.00036063642
amount = 12
texture = ExtResource("2_dqaer")
lifetime = 0.8
process_material = SubResource("ParticleProcessMaterial_sgvm5")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(50, 0)
shape = SubResource("RectangleShape2D_t5e3s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a5n8p")
}
autoplay = "attack"

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
